[package]
name = "marinade-bond-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
prometheus = "0.14.0"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = "1.0.140"
serde_toml = "0.0.1"
tokio = { version = "1.45.1", features = ["tokio-macros", "tracing", "macros", "rt-multi-thread"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
